[gd_scene load_steps=4 format=3 uid="uid://64wsemieq3qk"]

[ext_resource type="PackedScene" uid="uid://b02vrjremtd2y" path="res://Widget/BaseWidget/Widget.tscn" id="1_mgu1k"]
[ext_resource type="Script" path="res://Widget/ImageWidget/ImageWidget.gd" id="2_83fny"]
[ext_resource type="Texture2D" uid="uid://bfnhhn378baet" path="res://icon.svg" id="3_01vwm"]

[node name="ImageWidget" instance=ExtResource("1_mgu1k")]
custom_minimum_size = Vector2(100, 100)
offset_right = 201.0
script = ExtResource("2_83fny")

[node name="Anchor" type="Node2D" parent="." index="0"]

[node name="TextureRect" type="TextureRect" parent="Anchor" index="0"]
offset_left = 4.0
offset_top = 30.0
offset_right = 4.0
offset_bottom = 30.0
texture = ExtResource("3_01vwm")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="gui_input" from="Anchor/TextureRect" to="." method="_on_texture_rect_gui_input"]
[connection signal="resize_pressed" from="Buttons" to="." method="_on_buttons_resize_pressed"]
